@@ -1,3 +1,6 @@
+26 Layout 2009
++ Can enable box move from mini admin
+
 Version 2.4.6
 ------------------------------------------------------------------
 18 December 2008
